--- a/articles2.html
+++ b/articles2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Loop<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -120,7 +120,7 @@
         <div class="container">
             <p>Published on: October 5, 2024</p>
             
-            <img src="/FB_IMG_1728378689314.jpg" alt="Description of image" style="width:100%; height:auto; margin: 20px 0;">
+            <img src="FB_IMG_1728378689314.jpg" alt="Description of image" style="width:100%; height:auto; margin: 20px 0;">
             
             <p>The Library at Cebu Technological University Danao Campus is a vital resource center that supports academic excellence and research. Offering a diverse collection of books, journals, and digital resources, the library caters to the needs of students, faculty, and researchers across various disciplines.</p>
             <p>Equipped with comfortable study spaces and access to online databases, the library provides a conducive environment for learning and scholarly work. It also serves as a hub for information literacy, helping students develop critical research skills while fostering a culture of continuous learning within the CTU Danao community.</p>
