--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            background-image: url('/CTU_new_logo.png');
+            background-image: url('CTU_new_logo.png');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
